2008-11-29  Quentin Mathé <qmathe@club-internet.fr>

	* AZMainLoop.m (-mainLoopRun): Enclosed each run loop iteration in an 
	autorelease pool as expected. Looks like almost all autoreleased objects 
	where only deallocated when Azalea terminates by DESTROY(x) in main() (see 
	openbox.m).
	* openbox.m (-main): Fixed incorrect use of autorelease pools, by removing  
	CREATE_AUTORELEASE_POOL/DESTROY pair the second time it is used. We can do 
	that now that -[AZMainLoop mainLoopRun] handles this by itself as it should.
	Moreover the first created pool was never destroyed because 
	CREATE_AUTORELEASE_POOL(x) was called two times and the first only matched 
	with DESTROY(x) at the end, hence with no effects.
	Modified to use 'pool' as variable name instead of the very vague 'x' name.

2008-04-26  Yen-Ju Chen <yjchenx at gmail>

	* README: Add GPL2 or later in order to be compatible 
          with GPL3 of GNUstep.
	* README.openbox3: original README from OpenBox3 to 
	  prove the license can to be changed to GPL3.
        * Changing license to GPL3 will be followed.

2007-06-30  Yen-Ju Chen <yjchenx at gmail>

	* Add user defaults document to fix bug #8579.

2007-05-24  Yen-Ju Chen <yjchenx at gmail>

	* Change window switching to "Ctrl-Tab" to leave room for AZExpose.

2007-05-24  Quentin Mathé <qmathe@club-internet.fr>

	* GNUmakefile: Added ETOILE_CORE_MODULE.

2007-05-23  Yen-Ju Chen <yjchenx at gmail>

	* Use NSDebugLLog for debug messages. 
	  Current support 'X', 'Client', 'Focus' and 'Signal'.
	  All options can be viewed through 'grep NSDebugLLog *.m'
	* Use user defaults for most of settings.

2007-05-22  Yen-Ju Chen <yjchenx at gmail>

	* Use NSTimer and NSRunLoop for timeout, which simplify the code.
	* Turn off Startup-notification and XCursor for now.
	* Disable menu by default.

2007-05-21  Yen-Ju Chen <yjchenx at gmail>

	* Include etoile.make for clean build.
	* Simplify AZMainLoop and signal handling.

2007-05-20  Yen-Ju Chen <yjchenx at gmail>
